k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ifctoolkit

spec:
  replicas: 1

  selector:
    matchLabels:
      app: ifctoolkit

  template:
    metadata:
      labels:
        app: ifctoolkit

    spec:
      imagePullSecrets:
        - name: ghcr-secret

      containers:
        - name: ifctoolkit
          image: ghcr.io/colinbed/ifctoolkit:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
