k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ifctoolkit-service
spec:
  type: ClusterIP
  selector:
    app: ifctoolkit
  ports:
    - port: 80
      targetPort: 3000
